ALTER TABLE nota_credito ADD COLUMN recibo integer;
ALTER TABLE nota_credito ADD FOREIGN KEY (recibo) REFERENCES recibo (id) ON UPDATE NO ACTION ON DELETE NO ACTION;
ALTER TABLE ctacte_proveedor ALTER entregado TYPE numeric(12,2);
ALTER TABLE ctacte_proveedor ALTER importe TYPE numeric(12,2);
ALTER TABLE ctacte_cliente ALTER entregado TYPE numeric(12,2);
ALTER TABLE ctacte_cliente ALTER importe TYPE numeric(12,2);
ALTER TABLE detalle_remesa ADD UNIQUE (remesa, factura_compra);
ALTER TABLE detalle_recibo ADD UNIQUE (recibo, factura_venta);
2012/10/14
ALTER TABLE cheque_propio ADD COLUMN cuentabancaria_id integer NOT NULL;
ALTER TABLE cheque_propio ADD FOREIGN KEY (cuentabancaria_id) REFERENCES cuentabancaria (id) ON UPDATE NO ACTION ON DELETE NO ACTION;
ALTER TABLE comprobante_retencion DROP CONSTRAINT unq_comprobante_retencion_0;
ALTER TABLE comprobante_retencion ADD COLUMN propio boolean NOT NULL DEFAULT false;
ALTER TABLE comprobante_retencion ADD UNIQUE (numero, propio);
ALTER TABLE comprobante_retencion ALTER COLUMN propio DROP DEFAULT;
ALTER TABLE remesa DROP CONSTRAINT remesa_unique_añofiajwñoefijawo;
ALTER TABLE remesa ADD UNIQUE (sucursal, numero);
2012/10/10
ALTER TABLE iva ALTER iva TYPE numeric(5,2);
ALTER TABLE nota_credito DROP CONSTRAINT unq_nota_credito_0;
ALTER TABLE nota_credito ADD UNIQUE (sucursal, numero);
CREATE TABLE nota_credito_proveedor (
  id serial NOT NULL,
  anulada boolean NOT NULL,
  desacreditado numeric(12,2) NOT NULL,
  fecha_carga timestamp with time zone NOT NULL DEFAULT now(),
  fecha_nota_credito_proveedor date NOT NULL,
  gravado numeric(12,2) NOT NULL,
  importe numeric(12,2) NOT NULL,
  impuestos_recuperables numeric(12,2) NOT NULL,
  iva10 numeric(12,2) NOT NULL,
  iva21 numeric(12,2) NOT NULL,
  no_gravado numeric(12,2) NOT NULL,
  numero bigint NOT NULL,
  observacion character varying(250),
  proveedor integer NOT NULL,
  usuario integer NOT NULL,
  remesa integer,
  PRIMARY KEY (id),